@@ -1,8 +1,11 @@
-jQuery(document).ready(function(){
-    var djConfig = { parseOnLoad: true },
-        url = "http://serverapi.arcgisonline.com/jsapi/arcgis/?v=2.8",
+jQuery(document).ready(function($){
+    window.djConfig = {parseOnLoad: true,
+                    baseUrl: '.',
+                    modulePaths: { 'EEAGeotags': '.' }
+        };
+    var url = "http://serverapi.arcgisonline.com/jsapi/arcgis/?v=2.8",
         map, map_options,
-        portal_url = jQuery("#portal_url").html(),
+        portal_url = $("#portal_url").html(),
         feature_collection_renderer = {
             "type": "simple",
             "symbol": {
@@ -14,32 +17,35 @@ jQuery(document).ready(function(){
             }
         };
     map_options = {'infoWindowSize' : [350, 200], 'portalUrl': portal_url, 'featureCollectionRenderer': feature_collection_renderer};
-    if(jQuery('#faceted-form').length) {
-        jQuery(window.Faceted.Events).one('FACETED-AJAX-QUERY-SUCCESS', function(){
-             if (jQuery("#map_points").length) {
-                var portal_url = jQuery("#portal_url").html();
+    if($('#faceted-form').length) {
+        $(window.Faceted.Events).one('FACETED-AJAX-QUERY-SUCCESS', function(){
+             if ($("#map_points").length) {
+                var portal_url = $("#portal_url").html(),
+                    geotags_cluster_url = portal_url + '/geotagsClusterLayer.js';
                 map_options.featureCollectionRenderer.symbol.url = portal_url + "/event_icon.gif";
-                map = jQuery('#eeaEsriMap');
+                map_options.portalUrl = portal_url;
+                map = $('#eeaEsriMap');
                 map.insertBefore("#content-core");
-                jQuery.getScript(url, function () {
+                $.getScript(url, function () {
                     window.dojo.ready(function () {
-                        $.getScript('geotagsClusterLayer.js', function() {
+                        $.getScript(geotags_cluster_url, function(res){
                             map.EEAGeotagsView(map_options);
                         });
                     });
                 });
-                jQuery(window.Faceted.Events).bind('FACETED-AJAX-QUERY-SUCCESS', function(){
+                $(window.Faceted.Events).bind('FACETED-AJAX-QUERY-SUCCESS', function(){
                     window.EEAGeotags.View.prototype.drawPoints();
                 });
             }
         });
     }
     else {
-        if (jQuery("#map_points").length) {
-            map = jQuery("#eeaEsriMap");
-            jQuery.getScript(url, function () {
+        if ($("#map_points").length) {
+            $.getScript(url, function () {
                 window.dojo.ready(function () {
-                    $.getScript('geotagsClusterLayer.js', function() {
+                    var geotags_cluster_url = portal_url + '/geotagsClusterLayer.js';
+                    $.getScript(geotags_cluster_url, function(){
+                        map = $("#eeaEsriMap");
                         map.EEAGeotagsView(map_options);
                     });
                 });
